# onyx

./: README.md  pyproject.toml
.github/workflows/: run-tests.yml
onyx/: board.py  rules.py
tests/: test_board.py  test_rules.py
