[tool.poetry]
name = "Onyx"
version = "0.1.0"
description = ""
authors = ["eszter zimet <info@eszter.cc>", "Fen Faure <fen@fen.sh>"]
readme = "README.md"
packages = [
    { include = "onyx", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
